# -Domain-Expert-RAG-Assistant

./: .gitignore  README.md
backend/: README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_fix_document_storage_url.py  003_add_document_chunks.py  004_add_processing_tasks.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  chats.py  documents.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/crud/: __init__.py  chat.py  document.py  message.py  user.py
backend/app/models/: __init__.py  base.py  chat.py  document.py  document_chunk.py  message.py  processing_task.py  user.py
backend/app/schemas/: auth.py  chat.py  document.py  message.py
backend/app/services/: document_service.py  rag_service.py  storage_service.py
backend/app/services/ingest/: parsing.py
backend/tests/: conftest.py  factories.py  test_models.py
backend/tests/test_crud/: test_user.py  test_user_unit.py
backend/worker/: celery_app.py  tasks.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/auth/: AuthCard.tsx  ProtectedRoute.tsx
frontend/src/components/chat/: AuraInput.tsx  ChatFeed.tsx  MessageBubble.tsx  SourceCard.tsx
frontend/src/components/dashboard/: Sidebar.tsx
frontend/src/components/ui/: InputField.tsx
frontend/src/components/vault/: DocumentItem.tsx  (+2 more)
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api-client.ts
frontend/src/store/: useAuthStore.ts  useChatStore.ts  useDocumentStore.ts
infrastructure/: .env.example  docker-compose.yml
(+1 files in other folders)
